<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise_02</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_01_text">Hello this is Activity 1!</string>
    <string name="title_activity_activity_01">Activity_01</string>
    <string name="title_activity_activity_02">Activity_02</string>
    <string name="title_activity_activity_03">Activity_03</string>
    <string name="textActivities"> Go Back now!</string>
    <string name="bt01">Button 01</string>
    <string name="bt02">Button 02</string>
    <string name="bt03">Butttom 03</string>
    <string name="btBrowser">Browse me!</string>
    <string name="btCall">Call me!</string>
    <string name="title_activity_mlist">MList</string>

</resources>